Fixed image names and paths

--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
         <div class="menu-item"><img src="chilli-chicken.jpg"><p>Chilli Chicken</p> <p class="item-price">₹140</p></div>
         <div class="menu-item"><img src="Chicken Rolls.jpeg"><p>Chicken Rolls</p> <p class="item-price">₹170</p></div>
         <div class="menu-item"><img src="Chicken Lollipop.jpeg"><p>Chicken Lollipop</p> <p class="item-price">₹200</p></div>
-        <div class="menu-item"><img src="chicken-65.jpg"><p>Chicken 65</p> <p class="item-price">₹190</p></div>
+        <div class="menu-item"><img src="Chicken65.jpg"><p>Chicken 65</p> <p class="item-price">₹190</p></div>
         <div class="menu-item"><img src="fish-fry.jpg"><p>Fish Fries</p> <p class="item-price">₹190</p></div>
         <div class="menu-item"><img src="Prawn fries.jpg"><p>Prawn Fries</p> <p class="item-price">₹230</p></div>
         <div class="menu-item"><img src="Muttonsoup.jpg"><p>Mutton Soup</p> <p class="item-price">₹150</p></div>
         <div class="menu-item"><img src="Chicken Soup.jpg"><p>Chicken Soup</p> <p class="item-price">₹120</p></div>
         <div class="menu-item"><img src="Mutton Kebab.jpg"><p>Mutton Kebab</p> <p class="item-price">₹200</p></div>
         <div class="menu-item"><img src="Tandoori Chicken.jpg"><p>Tandoori Chicken</p> <p class="item-price">₹210</p></div>
-        <div class="menu-item"><img src="Chicken wings.jpg"><p>Chicken Wings</p> <p class="item-price">₹190</p></div>
-        <div class="menu-item"><img src="Chicken kebab.jpg"><p>Chicken Kebab</p> <p class="item-price">₹220</p></div>
+        <div class="menu-item"><img src="Chicken Wings.jpg"><p>Chicken Wings</p> <p class="item-price">₹190</p></div>
+        <div class="menu-item"><img src="Chicken Kebab.jpg"><p>Chicken Kebab</p> <p class="item-price">₹220</p></div>
         <div class="menu-item"><img src="Egg Roll.jpg"><p>Egg Roll</p> <p class="item-price">₹100</p></div>
     </div>
     <!-- Main Course -->
@@ -153,11 +153,11 @@
     <h3>Veg</h3>
     <div class="menu-grid">
         <div class="menu-item"><img src="paneer-butter.jpg"><p>Paneer Butter Masala</p> <p class="item-price">₹220</p></div>
-        <div class="menu-item"><img src="Paneer Curry.jpeg"><p>Paneer Curry</p> <p class="item-price">₹120</p></div>
+        <div class="menu-item"><img src="Paneer curry.jpeg"><p>Paneer Curry</p> <p class="item-price">₹120</p></div>
         <div class="menu-item"><img src="Palak Paneer.jpeg"><p>Palak Paneer</p> <p class="item-price">₹140</p></div>
         <div class="menu-item"><img src="Kadai Paneer.webp"><p>Kadai Paneer</p> <p class="item-price">₹130</p></div>
-        <div class="menu-item"><img src="dal Makhani.jpeg"><p>Dal Makhani</p> <p class="item-price">₹90</p></div>
-        <div class="menu-item"><img src="dal Tadka.jpg"><p>Dal Tadka</p> <p class="item-price">₹70</p></div>
+        <div class="menu-item"><img src="Dal Makhani.jpeg"><p>Dal Makhani</p> <p class="item-price">₹90</p></div>
+        <div class="menu-item"><img src="Dal Tadka.jpg"><p>Dal Tadka</p> <p class="item-price">₹70</p></div>
         <div class="menu-item"><img src="Chana Masala.jpg"><p>Chana Masala</p> <p class="item-price">₹100</p></div>
         <div class="menu-item"><img src="Aloo Gobi.jpeg"><p>Aloo Gobi</p> <p class="item-price">₹100</p></div>
         <div class="menu-item"><img src="Veg Biryani.jpeg"><p>Veg Biryani</p> <p class="item-price">₹130</p></div>
@@ -192,7 +192,7 @@
     <div class="menu-item"><img src="Plain Naan.jpeg"><p>Plain Naan</p> <p class="item-price">₹30</p></div>
     <div class="menu-item"><img src="Roti.webp"><p>Roti</p> <p class="item-price">₹25</p></div>
     <div class="menu-item"><img src="Butter-Roti.jpg"><p>Butter Roti</p> <p class="item-price">₹35</p></div>
-    <div class="menu-item"><img src="Plain Paratha.jpeg"><p>Plain Paratha</p> <p class="item-price">₹40</p></div>
+    <div class="menu-item"><img src="plain Paratha.jpeg"><p>Plain Paratha</p> <p class="item-price">₹40</p></div>
     <div class="menu-item"><img src="Stuffed Paratha.jpeg"><p>Stuffed Paratha</p> <p class="item-price">₹60</p></div>
     <div class="menu-item"><img src="Missi Roti.jpg"><p>Missi Roti</p> <p class="item-price">₹45</p></div>
 </div>
