--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Essence</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -187,7 +187,7 @@
     <p>✉️ contact@theessence.com</p>
 </section>
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
